[package]
name = "raytracer-rs"
version = "0.1.0"
authors = ["G. Lefranc <glefranc@eig.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.6.0"
cgmath = "0.17.0"
winit = "0.22"
env_logger = "0.7"
futures = "0.3"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"